2007-08-28  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* PkgVersion.pm: A couple of useful accessor methods used by the
	PDB-generation code.

2007-08-02  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Engine.pm: Implement fink list --format=dotty.

2007-08-01  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Validation.pm: Handle /usr/X11 packages properly.

2007-07-15  Daniel Macks  <dmacks@netspace.org>

	* VirtPackage.pm: use apple's own plist parser

2007-07-19  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: add an "xcode" virtual package

2007-07-18  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: fix sysctl call to actually be used  ;)

2007-07-15  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Don't complain if a valid .dylib filename is also
	a substring of another one.

2007-07-09  Dave Morrison  <drm@finkproject.org>

	* Bootstrap.pm: recognize 10.4.10

2007-06-18  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Document 'dumpinfo -pall'

2007-06-13  Daniel Macks  <dmacks@netspace.org>

	* VirtPackage.pm: as out to tempfile instead of a.out pollution

2007-06-13  Daniel Macks  <dmacks@netspace.org>

	* version.pm, version/vpp.pm: Import from version-0.7203
	(license=same-as-perl), convert to a Fink:: subnamespace.

2007-06-12  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: fix detection of modular X.org and cctools,
	fix 64-bit detection to not assume sysctl return-code means
	success

2007-06-12  Dave Morrison  <drm@finkproject.org>

	* Services.pm: test for existence of gcc_select before calling it

2007-06-11  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Services.pm: fall back to checking the gcc symlink if
	gcc_select is not there
	* VirtPackage.pm: give a warning when they have an incomplete
	X11 install

2007-06-06  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Accept .dylib whose install_name isn't absolute
