@@ -1,3 +1,8 @@
+2007-08-29  Daniel Macks  <dmacks@netspace.org>
+
+	* PkgVersion.pm: Simplify parameter passing; document wrappers in
+	terms of their back-end.
+
 2007-08-28  Benjamin Reed  <rangerrick@users.sourceforge.net>
 
 	* PkgVersion.pm: A couple of useful accessor methods used by the
